[package]
name = "velocity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.2.0"
smol = "1.2.5"
indicatif = "0.16.2"
surf = { version = "2.3.2", features = ["h1-client-rustls"] }
serde_json = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
